--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,7 +1,7 @@
 #posts
   - @posts.each do |post|
     .post
-      %h2= link_to post.title, post_path(post)
+      %h2.title= link_to post.title, post_path(post)
       %p.date
         Published at
         = time_ago_in_words(post.created_at)
