--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,13 +11,17 @@
   %header.main_header.clearfix
     .wrapper
       #logo
-        %p Rails Forum
+        %p= link_to "Rails Forum", root_path
       #buttons
-        = link_to "New Post", new_post_path
+        - if user_signed_in?
+          = link_to "New Post", new_post_path
+        - else
+          = link_to "Sign Up", new_user_registration_path
+          = link_to "Sing In", new_user_session_path  
 
   .wrapper
     %p.notice= notice
     %p.alert= alert
 
   .wrapper
-= yield
+    = yield
